--- a/FYProject1/Views/Admin/BannerDetails.cshtml
+++ b/FYProject1/Views/Admin/BannerDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FYProject1Classes.BannerMgmt.MainBanner
 @{
-    ViewBag.Title = "BannerDetails";
+    ViewBag.Title = "🚨 Banner Details";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
