--- a/FYProject1/Views/Admin/BannerManagment.cshtml
+++ b/FYProject1/Views/Admin/BannerManagment.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FYProject1Classes.BannerMgmt.MainBanner>
 
 @{
-    ViewBag.Title = "BannerManagment";
+    ViewBag.Title = "🚨 Banner Managment";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
