--- a/FYProject1/Views/Admin/AddBanner.cshtml
+++ b/FYProject1/Views/Admin/AddBanner.cshtml
@@ -1,13 +1,13 @@
 ﻿@model FYProject1Classes.BannerMgmt.MainBanner
 
 @{
-    ViewBag.Title = "AddBanner";
+    ViewBag.Title = "🚨 Add Banner";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h3 class="list-group-item-heading text-center notextselect">Banner Managment</h3>
 <div class="col-lg-9">
-    @using (Html.BeginForm("AddBanner","Admin",FormMethod.Post, new { id = "addbannerform", enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("AddBanner", "Admin", FormMethod.Post, new { id = "addbannerform", enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
@@ -19,19 +19,19 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Caption, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Caption, new { htmlAttributes = new { @class = "form-control" , id = "caption", name = "caption" } })
+                    @Html.EditorFor(model => model.Caption, new { htmlAttributes = new { @class = "form-control", id = "caption", name = "caption" } })
                     @Html.ValidationMessageFor(model => model.Caption, "", new { @class = "text-danger" })
                 </div>
             </div>
-            
+
             <div class="form-group">
                 <label class="control-label col-md-2">Upload Banner</label>
                 <div class="col-md-10">
-                    <input type="file" id="banner" name="banner" style="margin-top:5px"/>
+                    <input type="file" id="banner" name="banner" style="margin-top:5px" />
                     @Html.ValidationMessageFor(model => model.Banner_Url, "", new { @class = "text-danger" })
                     <div id="preview"></div>
                 </div>
-                
+
             </div>
 
             <div class="form-group">
@@ -50,10 +50,10 @@
     <br />
 </div>
 
-@section MyScript{ 
-<script src="~/Scripts/BannerPreview.js"></script>
+@section MyScript{
+    <script src="~/Scripts/BannerPreview.js"></script>
     <script type="text/javascript">
-        $(function () {            
+        $(function () {
             $("#banner").on("change", previewImages);
             $("#resetform").click(function () {
                 $("#preview").empty();
