👌 ♻ Update: Product Managment Update

--- a/FYProject1/Views/Product/AddProduct.cshtml
+++ b/FYProject1/Views/Product/AddProduct.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "AddProduct";
+    ViewBag.Title = "🚨 ➕ Add Product";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -281,9 +281,9 @@
 <br />
 
 @section myScript{
-    <script src="~/Scripts/ImagePreview.js"></script>
 
     <script type="text/javascript">
+
         $(function () {
 
             var ddlSubCat = document.getElementById("Categories");
