--- a/FYProject1/Views/Product/ProductDetails.cshtml
+++ b/FYProject1/Views/Product/ProductDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FYProject1Classes.ProductMgmt.Camera
 
 @{
-    ViewBag.Title = "ProductDetails";
+    ViewBag.Title = "🚨 Product Details";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
