--- a/FYProject1/Views/Product/ProductManagment.cshtml
+++ b/FYProject1/Views/Product/ProductManagment.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FYProject1Classes.ProductMgmt.Camera>
 
 @{
-    ViewBag.Title = "ProductManagment";
+    ViewBag.Title = "🚨 Product Managment";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
