--- a/FYProject1/Views/Location/AddCountry.cshtml
+++ b/FYProject1/Views/Location/AddCountry.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FYProject1Classes.LocationMgmt.Country
 
 @{
-    ViewBag.Title = "AddCountry";
+    ViewBag.Title = "🚨 ➕ Add Country";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
