--- a/FYProject1/Views/Location/DeleteCity.cshtml
+++ b/FYProject1/Views/Location/DeleteCity.cshtml
@@ -1,11 +1,11 @@
 ﻿@model FYProject1Classes.LocationMgmt.City
 
 @{
-    ViewBag.Title = "DeleteCity";
+    ViewBag.Title = "🚨 Delete City Confirm?";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2 class="list-group-item-heading text-center notextselect">Delete City</h2>
+<h2 class="list-group-item-heading text-center notextselect">Delete <u>@Model.Name</u></h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div class="col-lg-9">
@@ -21,10 +21,11 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
+        <div>
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back", "CityList", new { id = ViewBag.countryId })
         </div>
