--- a/FYProject1/Views/Location/DeleteCountry.cshtml
+++ b/FYProject1/Views/Location/DeleteCountry.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FYProject1Classes.LocationMgmt.Country
 
 @{
-    ViewBag.Title = "DeleteCountry";
+    ViewBag.Title = "🚨 Delete Country";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -29,10 +29,11 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
+        <div>
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to Country List", "LocationManagment")
         </div>
