--- a/FYProject1/Views/Location/LocationManagment.cshtml
+++ b/FYProject1/Views/Location/LocationManagment.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FYProject1Classes.LocationMgmt.Country>
 
 @{
-    ViewBag.Title = "LocationManagment";
+    ViewBag.Title = "🚨 Location Managment";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
