--- a/FYProject1/Views/User/ForgotPassword.cshtml
+++ b/FYProject1/Views/User/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "ForgotPassword";
+    ViewBag.Title = "💊 Forgot Password";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,7 +10,7 @@
     <div class="col-lg-4">
         <div class="row">
             <p>Enter Your Registered Email address. <br />A recovery password mail will be sent to you.!</p>
-            @using (Html.BeginForm("ForgotPassword","User",FormMethod.Post))
+            @using (Html.BeginForm("ForgotPassword", "User", FormMethod.Post))
             {
                 <br />
                 <div class="form-group">
