--- a/FYProject1/Views/User/Login.cshtml
+++ b/FYProject1/Views/User/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FYProject1.Models.LoginViewModel
 
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "LK' - 📸 Shop Login";
 }
 
 <!-- ---------- Central Work Area ---------- -->
