--- a/FYProject1/Views/User/UserEdit.cshtml
+++ b/FYProject1/Views/User/UserEdit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FYProject1Classes.UserMgmt.User
 
 @{
-    ViewBag.Title = "UserEdit";
+    ViewBag.Title = "🚨 User Edit";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
