--- a/FYProject1/Views/User/UserGuestUpdate.cshtml
+++ b/FYProject1/Views/User/UserGuestUpdate.cshtml
@@ -3,7 +3,7 @@
 @model FYProject1Classes.UserMgmt.User
 
 @{
-    ViewBag.Title = "UserGuestUpdate";
+    ViewBag.Title = "🚨 User GuestUpdate";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
     User user = (User)Session[WebUtil.CURRENT_USER];
     var msg = ViewBag.msg;
