--- a/FYProject1/Views/User/UserManagment.cshtml
+++ b/FYProject1/Views/User/UserManagment.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FYProject1Classes.UserMgmt.User>
 
 @{
-    ViewBag.Title = "UserManagment";
+    ViewBag.Title = "🚨 User Managment";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
