--- a/FYProject1/Views/User/UserDelete.cshtml
+++ b/FYProject1/Views/User/UserDelete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FYProject1Classes.UserMgmt.User
 
 @{
-    ViewBag.Title = "UserDelete";
+    ViewBag.Title = "🚨 User " + @Model.FullName + " Delete";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this User?</h3>
 <div class="col-lg-9">
-    <h4>Delete User</h4>
+    <h4>Delete User @Model.FullName</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -118,10 +118,11 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
+        <div>
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "UserManagment")
         </div>
