🔥 ♻ Update: Removing Excessive Script Files

--- a/FYProject1/Views/Shared/_AdminLayout.cshtml
+++ b/FYProject1/Views/Shared/_AdminLayout.cshtml
@@ -170,13 +170,13 @@
 
     <!-- Scripting Here -->
 
-    <script src="~/Scripts/jquery-1.9.1.min.js"></script>
-    <script src="~/Scripts/jquery-1.9.1.intellisense.js"></script>
+    <script src="~/Scripts/jquery-2.2.3.min.js"></script>
+    <script src="~/Scripts/jquery-2.2.3.intellisense.js"></script>
     <script src="~/bootstrap/js/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
-    <script src="~/Scripts/editor.js"></script>
-    <script src="~/Scripts/sorttable.js"></script>
     <script src="~/Scripts/datatables.min.js"></script>
+    <script src="~/Scripts/ImagePreview.js"></script>
+
     <script type="text/javascript">
         $(function () {
 
