🎨 Update: Beautify Markup

--- a/FYProject1/Views/Admin/AdminPanel.cshtml
+++ b/FYProject1/Views/Admin/AdminPanel.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "AdminPanel";
+    ViewBag.Title = "🚨 Admin Panel 🚨";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
