🔥♻ Update: Removing Excess Styling File

--- a/FYProject1/Views/Shared/_AdminLayout.cshtml
+++ b/FYProject1/Views/Shared/_AdminLayout.cshtml
@@ -14,14 +14,13 @@
     <meta name="author" content="Arslan Ameer" />
     <meta name="description" content="LK-OnlineCameraShop" />
 
-    <link href="~/Content/editor.css" rel="stylesheet" />
     <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
     <link href="~/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
     <link href="~/Content/datatables.min.css" rel="stylesheet" />
-    <script src="~/Scripts/sorttable.js"></script>
 </head>
+
 <body>
 
 
@@ -92,7 +91,7 @@
             <!-- Nav Bar Right Area Buttons -->
 
             <ul class="nav navbar-nav navbar-right">
-                <li style="margin-top: 15px"><i class="lahore-temp"></i></li>
+                <li style="margin-top: 15px; margin-right: 50px; color: antiquewhite"><i class="lahore-temp"></i></li>
                 <li style="font-size: 20px"><a href="@Url.Action("ViewCart", "cart")"><span class="fa fa-shopping-cart"></span> <i id="cartitems" style="font-size: 10px" class="badge">0</i></a></li>
                 @if (currentUser != null)
                 {
