--- a/FYProject1/Views/Shared/_Layout.cshtml
+++ b/FYProject1/Views/Shared/_Layout.cshtml
@@ -16,8 +16,7 @@
     <link href="~/Content/Main.css" rel="stylesheet" />
     <link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
-    <link href="~/Content/jquery-ui.css" rel="stylesheet" />
-    @*<link href="~/Content/jquery-ui.min.css" rel="stylesheet" />*@
+    <link href="~/Content/jquery-ui.min.css" rel="stylesheet" />
     <style type="text/css">
         @RenderSection("CustomStyles", false)
     </style>
