♻ Update: Code Refactoring and Beautification

--- a/FYProject1/Content/Main.css
+++ b/FYProject1/Content/Main.css
@@ -383,6 +383,8 @@ textarea:focus::-moz-placeholder {
     color: transparent;
 }
 
+/* --------- Open weather API --------- */
+
 .lahore-temp {
     font-size: small;
     margin-right: 50px;
