--- a/FYProject1/Views/Home/Index.cshtml
+++ b/FYProject1/Views/Home/Index.cshtml
@@ -44,13 +44,13 @@
                 if (numb <= 0)
                 {
                     <div class="item active">
-                        <img class="img-responsive" src="@b.Banner_Url" />
+                        <img class="img-responsive" src="@b.Banner_Url" alt="loading..." />
                     </div>
                 }
                 else
                 {
                     <div class="item">
-                        <img class="img-responsive" src="@b.Banner_Url" />
+                        <img class="img-responsive" src="@b.Banner_Url" alt="loading..." />
                     </div>
                 }
                 numb++;
