--- a/FYProject1/Views/Home/ProductsByBrand.cshtml
+++ b/FYProject1/Views/Home/ProductsByBrand.cshtml
@@ -2,15 +2,15 @@
 @using FYProject1Classes.ProductMgmt
 
 @{
-    ViewBag.Title = "ProductsByBrand";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
     List<CameraSummaryModel> cameras = ViewBag.CameraByBrands;
     Brand brand = ViewBag.brand;
+    ViewBag.Title = brand.Name + " Cameras";
 }
 
 <div class="col-lg-9">
     <div class="row">
-       
+
         <img class="img-responsive center-block" src="@Url.Content(brand.Brand_Image)" alt="brandbanner" style="width:auto; height:auto" />
         <h2 class="text-center notextselect">@brand.Name DSLR Cameras</h2>
         <hr />
