--- a/FYProject1/Views/Home/ProductDetail.cshtml
+++ b/FYProject1/Views/Home/ProductDetail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FYProject1Classes.ProductMgmt.Camera
 
 @{
-    ViewBag.Title = "ProductDetail";
+    ViewBag.Title = Model.Title + " Details";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 @section myStyles{
@@ -10,6 +10,31 @@
             white-space: pre-wrap; /* Since CSS 2.1 */
             word-wrap: break-word; /* Internet Explorer 5.5+ */
         }
+
+        @@media screen and (max-width: 992px) {
+            img {
+                margin-left: 30vw;
+            }
+        }
+
+        @@media screen and (max-width: 767px) {
+            dd, dt {
+                text-align: center;
+            }
+
+                dd:after {
+                    content: "";
+                    display: block;
+                    width: 100%;
+                    height: 3px;
+                    /*color: darkgrey;*/
+                    background-color: lightgray;
+                }
+
+            dt {
+                text-decoration: underline;
+            }
+        }
     </style>
 }
 <h2 class="list-group-item-heading text-center notextselect">@Html.DisplayFor(model => model.Title)</h2>
@@ -17,16 +42,18 @@
 <div class="col-lg-9">
     <h4>@Html.DisplayFor(model => model.Title) - <em>@Html.DisplayFor(model => model.Kit) </em></h4>
     <hr />
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-2 col-sm-12">
         @foreach (var item in Model.Images)
         {
-            <img data-toggle="magnify" src="@Url.Content(item.Image_Url)" alt="images" height="150" width="150" />
+            <div>
+                <img data-toggle="magnify" src="@Url.Content(item.Image_Url)" alt="images" height="150" width="150" />
+            </div>
             <hr />
             <br />
         }
     </div>
 
-    <div class="col-lg-9">
+    <div class="col-lg-9 col-md-7 col-sm-12">
         <dl class="dl-horizontal">
             <dt>
                 @Html.DisplayNameFor(model => model.Title)
@@ -234,8 +261,8 @@
 
             <dd>
                 <pre>
-                @Html.DisplayTextFor(model => model.Description)
-            </pre>
+                    @Html.DisplayTextFor(model => model.Description)
+                </pre>
             </dd>
 
             <dt>
