🎨 👌 Add: Picture Zoom on hover

--- a/FYProject1/Views/Home/ProductDetail.cshtml
+++ b/FYProject1/Views/Home/ProductDetail.cshtml
@@ -282,5 +282,6 @@
 
 @section myScript{
 
-    <script src="~/Scripts/bootstrap-magnify.js"></script>
+    @*<script src="~/Scripts/bootstrap-magnify.js"></script>*@
+    <script src="~/Scripts/simplezoom.js"></script>
 }
