🐛 Fix: Images Lazy Loading Products by Brands (#1)

--- a/FYProject1/Views/Home/ProductsByBrand.cshtml
+++ b/FYProject1/Views/Home/ProductsByBrand.cshtml
@@ -28,3 +28,9 @@
     </div>
 </div>
 
+@section myScript{
+    <script src="~/Scripts/blazy.min.js"></script>
+    <script type="text/javascript">
+        var bLazy = new Blazy();
+    </script>
+}
