--- a/FYProject1/Views/Shared/_MainLayout.cshtml
+++ b/FYProject1/Views/Shared/_MainLayout.cshtml
@@ -291,7 +291,7 @@
                 });
             };
 
-            setInterval(apiCall(), 300000);
+            setInterval(apiCall, 30000);
 
             // --> CART Handling Here
 
