🐛 Fix #1:  resolving #1 images not loading

--- a/FYProject1/Views/Home/ProductsByBrand.cshtml
+++ b/FYProject1/Views/Home/ProductsByBrand.cshtml
@@ -33,4 +33,4 @@
     <script type="text/javascript">
         var bLazy = new Blazy();
     </script>
-}
+}@* Re-Committed to solve Issue on BitBucket after adding this comment *@
