--- a/FYProject1/Views/Home/Index.cshtml
+++ b/FYProject1/Views/Home/Index.cshtml
@@ -97,5 +97,8 @@
     <script src="~/Scripts/blazy.min.js"></script>
     <script type="text/javascript">
         var bLazy = new Blazy();
+        setTimeout(() => {
+            roar("<strong><u>Notice</u></strong>", "Demo Site For Testing Purpose Only<br/> Not Ready To Shop.", { confirmText: "Close" });
+        }, 5000);
     </script>
 }
