--- a/FYProject1/Views/Shared/_MainLayout.cshtml
+++ b/FYProject1/Views/Shared/_MainLayout.cshtml
@@ -148,7 +148,7 @@
         </div>
     </nav>
 
-
+    <div style="position: fixed; top: 0; left: 45%; z-index: 999; background-color: cornsilk; color: black; height: 40px"> <h4>DEMO / TESTING</h4> </div>
 
     <!-- Main Page BODY -->
 
